feat: GPU and auxiliary functions implemented

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <lwjgl.version>3.3.3</lwjgl.version>
+    <lombok.version>1.18.32</lombok.version>
   </properties>
 
   <repositories>
@@ -542,6 +543,22 @@
       <groupId>org.lwjgl</groupId>
       <artifactId>lwjgl-zstd</artifactId>
       <classifier>${lwjgl.natives}</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>javacv</artifactId>
+      <version>1.5.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>javacv-platform</artifactId>
+      <version>1.5.10</version>
     </dependency>
   </dependencies>
 
