feat: cpu decoder

--- a/pom.xml
+++ b/pom.xml
@@ -560,6 +560,12 @@
       <artifactId>javacv-platform</artifactId>
       <version>1.5.10</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
