Simple definition of a GUI

--- a/pom.xml
+++ b/pom.xml
@@ -571,6 +571,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>23</version>
+        </dependency>
     </dependencies>
 
     <build>
