--- a/pom.xml
+++ b/pom.xml
@@ -576,6 +576,11 @@
             <artifactId>javafx-swing</artifactId>
             <version>23</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
     </dependencies>
 
     <build>
